# pytest-html-plus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  final_report.json  index.html  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: actions-test.yml  coverage-main.yml  publish.yml  unit-test-windows.yml  unit-test.yml
docs/: conf.py  contributing.rst  usage.rst
docs/Features/: report-metadata.rst  search.rst
docs/cli/: cli.rst  execution-metadata.rst  generate-xml.rst  html-output.rst  json-report.rst  send-email.rst
docs/marketplace/: usage.rst
pytest_html_plus/: compute_filter_counts.py  compute_git_branch.py  compute_report_metadata.py  generate_html_report.py  json_merge.py  json_to_xml_converter.py  plugin.py  resolver_driver.py  send_email_report.py  uploader.py  utils.py
pytest_html_plus/config/: error_rules.yaml
report_output/: final_report.json  index.html  plus_metadata.json  report.html
tests/browser/: test_playwright.py  test_selenium.py
tests/e2e/: test_email.py  test_flaky_simulation.py  test_plugin.py
tests/unit/: conftest.py  test_convert_json_to_junit_xml.py  test_copy_all_screenshots.py  test_driver_screenshots.py  test_error_block.py  test_find_screenshot_and_copy.py  test_flaky_badge.py  test_json_merger.py  test_mark_flaky_tests.py  test_marker_links.py  test_plugin_logging.py  test_profile_loading.py  test_setup_failure.py  test_trace_block.py
