[tool.poetry]
name = "pytest-html-plus"
version = "0.5.0"
description = "Generate Actionable, automatic screenshots, unified Mobile friendly Pytest HTML report in less than 3 seconds — no hooks, merge plugins, no config, xdist-ready."
readme = "README.md"
authors = ["reporterplus"]
license = "MIT"
packages = [{ include = "pytest_html_plus" }]
maintainers = ["reporterplus"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]
keywords = [
    "pytest",
    "pytest-plugin",
    "html-report",
    "test-report",
    "screenshot",
    "mobile-report",
    "xdist",
    "allure-alternative",
    "playwright",
    "selenium",
]

urls.Homepage = "https://github.com/reporterplus/pytest-html-plus"
urls.Source = "https://github.com/reporterplus/pytest-html-plus"
urls.Tracker = "https://github.com/reporterplus/pytest-html-plus/issues"
urls.Documentation = "https://pytest-html-plus.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
yagmail = ">=0.15.293,<0.16.0"
keyring = ">=25.6.0,<26.0.0"

[tool.poetry.group.dev.dependencies]
pytest-rerunfailures = "^15.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
playwright = "^1.53.0"
pytest-playwright = "^0.7.0"
pytest-xdist = "^3.8.0"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"
ruff = "^0.15.2"
black ="^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
pytest_html_plus = "pytest_html_plus.plugin"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []