[tool.poetry]
name = "pytest-html-plus"
version = "1.0.1"
description = "Generate Actionable, automatic screenshots, unified Mobile friendly Pytest HTML report in less than 3 seconds — no hooks, merge plugins, no config, xdist-ready."
readme = "README.md"
authors = ["reporterplus"]
license = "MIT"
packages = [{ include = "pytest_html_plus" }]
maintainers = ["reporterplus"]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
]
keywords = [
    "pytest",
    "pytest-plugin",
    "html-report",
    "test-report",
    "screenshot",
    "mobile-report",
    "xdist",
    "allure-alternative",
    "playwright",
    "selenium",
]

urls.Homepage = "https://github.com/reporterplus/pytest-html-plus"
urls.Source = "https://github.com/reporterplus/pytest-html-plus"
urls.Tracker = "https://github.com/reporterplus/pytest-html-plus/issues"
urls.Documentation = "https://pytest-html-plus.readthedocs.io"
urls.Changelog = "https://github.com/reporterplus/pytest-html-plus/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
yagmail = ">=0.15.293,<0.16.0"
keyring = ">=25.6.0,<26.0.0"
tomli = { version = ">=2.0.1,<3.0.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest-rerunfailures = "^15.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
playwright = "^1.53.0"
pytest-playwright = "^0.7.0"
pytest-xdist = "^3.8.0"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"
ruff = "^0.15.2"
black = "^26.3.1"
isort = "^8.0.1"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
pytest_html_plus = "pytest_html_plus.plugin"

[tool.pytest-html-plus.profiles.ci]
generate-xml = true
xml-report = "final_xml_ci.xml"

[tool.pytest-html-plus.profiles.ci-warnings]
generate-xml = true
xml-report = "final_xml_ci_warnings.xml"
html-output = "report_output_warnings"

[tool.ruff]
line-length = 88
target-version = "py39"
ignore = [
    "E501",  # line too long — let black handle
    "W291",  # trailing whitespace — let black handle
    "W293",  # blank line whitespace — let black handle
]
exclude = [
    "pytest_html_plus/generate_html_report.py"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []
